Update all references

--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Index.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Index.razor
@@ -2,7 +2,7 @@
 @using DataModel = PartyPlaylists.Models.DataModels
 @using PartyPlaylists.Services;
 @using PartyPlaylists.Models;
-@using SpotifyApi.NetCore;
+@using SpotifyApi.NetCore.Authorization;
 @using System.Web;
 @using Cloudcrate.AspNetCore.Blazor.Browser.Storage;
 @using PartyPlaylists.Contexts;
