--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SpotifyAuthentication.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SpotifyAuthentication.razor
@@ -2,7 +2,7 @@
 @inject IConfiguration Configuration
 @inject UserAccountsService UserAccountsService
 
-@using SpotifyApi.NetCore;
+@using SpotifyApi.NetCore.Authorization;
 @using Microsoft.Extensions.Configuration;
 
 @if (Room != null)
