--- a/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SpotifyWebPlayer.razor
+++ b/PartyPlaylists/PartyPlaylists.BlazorWeb/Pages/Room/Components/SpotifyWebPlayer.razor
@@ -4,7 +4,7 @@
 @inject IJSRuntime  JSRuntime
 @inject SpotifyService SpotifyService
 
-@using SpotifyApi.NetCore;
+@using SpotifyApi.NetCore.Authorization;
 @using Microsoft.Extensions.Configuration;
 @using PartyPlaylists.Services;
 
