--- a/PartyPlaylists.MVC/Views/_ViewImports.cshtml
+++ b/PartyPlaylists.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PartyPlaylists.MVC
 @using PartyPlaylists.MVC.Models
+@using PartyPlaylists.MVC.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
