--- a/PartyPlaylists.MVC/wwwroot/css/site.css
+++ b/PartyPlaylists.MVC/wwwroot/css/site.css
@@ -12,6 +12,10 @@ a {
   color: #0366d6;
 }
 
+.nostyle a {
+    text-decoration: none;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
