Add song list partial to room view

--- a/PartyPlaylists.MVC/Views/Room/Components/_SongList.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Components/_SongList.cshtml
@@ -1,7 +1,8 @@
 ﻿@model RoomVM
 
+<a asp-action="Index" asp-controller="Home">asdsd</a>
 <table class="table">
-    @if (Model.CurrentRoom != null && Model.CurrentRoom.RoomSongs.ToList().Count > 0)
+    @if (Model?.CurrentRoom != null && Model?.CurrentRoom?.RoomSongs?.ToList().Count > 0)
     {
     <tr>
         <th scope="col">Artist</th>
