Add JWT authentication to application

--- a/PartyPlaylists.MVC/Views/Room/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Index.cshtml
@@ -3,5 +3,7 @@
     ViewData["Title"] = "Index";
 }
 
+<input type="hidden" id="jwtToken" name="jwtToken" value="@Model.JwtToken">
+
 <h1>Index</h1>
 <partial name="Components/_SongList" />
