--- a/PartyPlaylists.MVC/Views/Room/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Index.cshtml
@@ -6,7 +6,8 @@
 <input type="hidden" id="jwtToken" name="jwtToken" value="@Model.JwtToken">
 <input type="hidden" id="roomId" name="roomId" value="@Model.CurrentRoom.Id">
 
-<h1>Index</h1>
+<h1>@Model.CurrentRoom.Name</h1>
+<h2>By: @Model.CurrentRoom.Owner</h2>
 <table class="table">
     @if (Model?.CurrentRoom != null && Model?.CurrentRoom?.RoomSongs?.ToList().Count > 0)
     {
