--- a/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
@@ -6,6 +6,6 @@
     <td id="@($"songRating{Model.SongId}")">@Model.SongRating</td>
     <td>@Model.SongAddedBy</td>
     <td>
-        <button class="btn btn-primary btn-sm" type="button" id="addVoteButton" value="@Model.SongId">Add Vote</button>
+        <button class="btn btn-primary btn-sm" type="button" name="addVoteButton" value="@Model.SongId">Add Vote</button>
     </td>
 </tr>
