--- a/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
@@ -1,11 +1,14 @@
-﻿@model PartyPlaylists.Models.DataModels.RoomSong;
+﻿@model List<PartyPlaylists.Models.DataModels.RoomSong>;
 
-<tr>
-    <td>@Model.Song.Artist</td>
-    <td>@Model.Song.Name</td>
-    <td id="@($"songRating{Model.SongId}")">@Model.SongRating</td>
-    <td>@Model.SongAddedBy</td>
-    <td>
-        <button class="btn btn-primary btn-sm" type="button" name="addVoteButton" value="@Model.SongId">Add Vote</button>
-    </td>
-</tr>
+@foreach (var item in Model.OrderByDescending(s => s.SongRating))
+{
+    <tr>
+        <td>@item.Song.Artist</td>
+        <td>@item.Song.Name</td>
+        <td id="@($"songRating{item.SongId}")">@item.SongRating</td>
+        <td>@item.SongAddedBy</td>
+        <td>
+            <button class="btn btn-primary btn-sm" type="button" name="addVoteButton" value="@item.SongId">Add Vote</button>
+        </td>
+    </tr>
+}
