Add ability to stream spotify from room

--- a/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Components/_roomSongTableRow.cshtml
@@ -10,5 +10,6 @@
         <td>
             <button class="btn btn-primary btn-sm" type="button" name="addVoteButton" value="@item.SongId">Add Vote</button>
         </td>
+        <td hidden name="playerUri">@item.Song.SpotifyId</td>
     </tr>
 }
