--- a/PartyPlaylists.MVC/Views/Room/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Index.cshtml
@@ -49,29 +49,31 @@ else
 
 @section Scripts
 {
+    <script>
+        function postSongVote(songId) {
+            $.ajax({
+                url: "/room/addvotetosong",
+                type: "POST",
+                data: {
+                    "roomId": $("#roomId")[0].value,
+                    "songId": songId
+                },
+                headers: {
+                    'Authorization': "Bearer " + $("#jwtToken")[0].value,
+                },
+                success: function (data) {
+                    $("#tableOfSongs").html(data);
+                    $("[name='addVoteButton']").off('click').click(function () { postSongVote($(this).val()); });
+                },
+                error: function (data) {
+                    console.log(data);
+                }
+            });
+        }
+    </script>
     <script type="text/javascript">
         $(document).ready(function () {
-            function postSongVote(songId) {
-                $.ajax({
-                    url: "/room/addvotetosong",
-                    type: "POST",
-                    data: {
-                        "roomId": $("#roomId")[0].value,
-                        "songId": songId
-                    },
-                    headers: {
-                        'Authorization': "Bearer " + $("#jwtToken")[0].value,
-                    },
-                    success: function (data) {
-                        $("#tableOfSongs").html(data);
-                    },
-                    error: function (data) {
-                        console.log(data);
-                    }
-                });
-            }
-
-            $("[name='addVoteButton']").click(function () { postSongVote($(this).val()); })
+            $("[name='addVoteButton']").off().click(function () { postSongVote($(this).val()); });
         });
     </script>
 
@@ -91,6 +93,7 @@ else
                 success: function (data) {
                     $("#tableOfSongs").html(data);
                     $("#songToAdd").val('');
+                    $("[name='addVoteButton']").off('click').click(function () { postSongVote($(this).val()); });
                 },
                 error: function (data) {
                     console.log(data);
