--- a/PartyPlaylists.MVC/Views/Room/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Index.cshtml
@@ -63,7 +63,8 @@ else
                 },
                 success: function (data) {
                     $("#tableOfSongs").html(data);
-                    $("[name='addVoteButton']").off('click').click(function () { postSongVote($(this).val()); });
+                    $("[name='addVoteButton']").off('click');
+                    $("[name='addVoteButton']").click(function () { postSongVote($(this).val()); });
                 },
                 error: function (data) {
                     console.log(data);
@@ -76,7 +77,13 @@ else
             $("[name='addVoteButton']").off().click(function () { postSongVote($(this).val()); });
         });
     </script>
-
+    <script>
+        $(document).ready(function () {
+            $("table").on('DOMSubtreeModified', "#tableOfSongs", function () {
+                $("[name='addVoteButton']").off().click(function () { postSongVote($(this).val()); });
+            });
+        });
+    </script>
     <script>
         function postSongData() {
             $.ajax({
@@ -93,7 +100,8 @@ else
                 success: function (data) {
                     $("#tableOfSongs").html(data);
                     $("#songToAdd").val('');
-                    $("[name='addVoteButton']").off('click').click(function () { postSongVote($(this).val()); });
+                    $("[name='addVoteButton']").off('click');
+                    $("[name='addVoteButton']").click(function () { postSongVote($(this).val()); });
                 },
                 error: function (data) {
                     console.log(data);
