--- a/PartyPlaylists.MVC/Views/_ViewImports.cshtml
+++ b/PartyPlaylists.MVC/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PartyPlaylists.MVC
 @using PartyPlaylists.MVC.Models
 @using PartyPlaylists.MVC.Models.ViewModels
+@using PartyPlaylists.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
