--- a/PartyPlaylists.MVC/Views/Room/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Room/Index.cshtml
@@ -43,9 +43,22 @@ else
     <br />
     <br />
     <br />
+    <div id="playlistControlDiv">
+        @if (Model.CurrentRoom.Owner == Model.CurrentUserName || Model.CurrentRoom.AllowTransferOfControl)
+        {
+            <button class="btn btn-primary" type="button" id="startPlaylistButton">Start Playlist</button>
+        }
+    </div>
     @if (Model.CurrentRoom.Owner == Model.CurrentUserName)
     {
-        <button class="btn btn-primary" type="button" id="startPlaylistButton">Start Playlist</button>
+        <form method="post" asp-controller="Room" asp-action="UpdateTransferOfControl">
+            <label>Allow transfer of control</label>
+            <input asp-for="@Model.CurrentRoom.AllowTransferOfControl" />
+            <input hidden asp-for="@Model.CurrentRoom.Id" />
+            <br />
+            <br />
+            <button class="btn btn-primary" type="submit" id="saveRoomChanges">Save</button>
+        </form>
     }
 }
 
@@ -210,4 +223,10 @@ else
     </script>
 
     <script src="~/js/roomhub.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $("#allowTransferButton")
+        });
+    </script>
 }
