Add some colors

--- a/PartyPlaylists.MVC/wwwroot/css/site.css
+++ b/PartyPlaylists.MVC/wwwroot/css/site.css
@@ -23,9 +23,17 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #eb5160;
+}
+
+nav {
+    border-bottom: #eb5160 !important;
+}
+
+header {
+    background-color: #eb5160;
 }
 
 /* Sticky footer styles
@@ -63,13 +71,29 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: #071013;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 45px; /* Vertically center the text there */
+    background-color: #1d2528;
+}
+
+.card-body {
+    background-color: #1d2528;
+}
+
+.btn-primary {
+    background-color: #eb5160;
+    border-color: #eb5160;
+}
+
+.btn-square-lg {
+    width: 11em !important;
+    height: 8em !important;
 }
