--- a/PartyPlaylists.MVC/Views/Home/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Home/Index.cshtml
@@ -4,37 +4,44 @@
 }
 
 <div class="row justify-content-center">
-    <div class="col-3">
-        <div class="card">
-            <a class="nostyle" data-toggle="collapse" href="#joinRoomCardBody">
-                <div class="card-header">
-                    Join a room
-                </div>
-            </a>
-            <div class="card-body collapse" id="joinRoomCardBody">
+    <a class="btn btn-primary btn-square-lg mr-5" data-toggle="collapse" href="#joinRoomCollapse" role="button">
+        <i class="fas fa-search fa-4x mt-3"></i>
+        <br />
+        Join Room
+    </a>
+
+    <a class="btn btn-primary btn-square-lg" data-toggle="collapse" href="#createRoomCollapse" role="button">
+        <i class="fas fa-plus fa-4x mt-3"></i>
+        <br />
+        Create Room
+    </a>
+</div>
+
+<div class="row justify-content-center">
+    <div class="col-6">
+        <div class="collapse mt-2 text-white" id="joinRoomCollapse">
+            <div class="card card-body">
                 <form method="get" asp-controller="Home" asp-action="JoinRoom">
-                    <label>Enter a room ID: </label>
-                    <input asp-for="@Model.RoomToJoin" />
-                    <br />
-                    <button class="btn btn-sm btn-primary">Join Room</button>
-                </form>
+                    <div class="form-group">
+                        <label>Enter a room ID: </label>
+                        <input asp-for="@Model.RoomToJoin" class="form-control" />
+
+                        <button class="btn btn-primary mt-3">Join</button>
+                    </div>
+                </form>            
             </div>
         </div>
     </div>
-
-    <div class="col-3">
-        <div class="card">
-            <a class="nostyle" data-toggle="collapse" href="#createRoomCardBody">
-                <div class="card-header">
-                    Create a room
-                </div>
-            </a>
-            <div class="card-body collapse" id="createRoomCardBody">
+    <div class="col-6">
+        <div class="collapse mt-2 text-white" id="createRoomCollapse">
+            <div class="card card-body">
                 <form method="post" asp-controller="Home" asp-action="CreateRoom">
-                    <label>Enter a room name: </label>
-                    <input asp-for="@Model.NewRoomName" />
-                    <br />
-                    <button class="btn btn-sm btn-primary">Create Room</button>
+                    <div class="form-group">
+                        <label>Enter a room name: </label>
+                        <input asp-for="@Model.NewRoomName" class="form-control" />
+
+                        <button class="btn btn-sm btn-primary mt-3">Create Room</button>
+                    </div>
                 </form>
             </div>
         </div>
