Update color scheme

--- a/PartyPlaylists.MVC/Views/Home/Index.cshtml
+++ b/PartyPlaylists.MVC/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                         <label>Enter a room ID: </label>
                         <input asp-for="@Model.RoomToJoin" class="form-control" />
 
-                        <button class="btn btn-primary mt-3">Join</button>
+                        <button class="btn btn-primary btn-lg mt-3">Join</button>
                     </div>
                 </form>            
             </div>
@@ -40,7 +40,7 @@
                         <label>Enter a room name: </label>
                         <input asp-for="@Model.NewRoomName" class="form-control" />
 
-                        <button class="btn btn-sm btn-primary mt-3">Create Room</button>
+                        <button class="btn btn-primary btn-lg mt-3">Create</button>
                     </div>
                 </form>
             </div>
